# minix_vm

./: Cargo.toml  README.md  minix_vm
origin/default/: 5c.txt  7c.txt  nm.txt
origin/vm/: 2c.txt  3c.txt  6c.txt  7c.txt
src/: main.rs
src/arch/: asm.rs  bin.rs  constant.rs  decode.rs  header.rs  mod.rs  opcode.rs  operand.rs  reg.rs  vm.rs
src/test/: mod.rs
src/test/shell/: dasm.sh  default.sh  default_5c.sh  vm.sh
